# FluxIPTV

./: CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
css/: base.css  header.css  modals.css  player.css  responsive.css  sidebar.css  variables.css
css/modals/: base.css  epg.css  m3u.css  playlist.css  settings.css  toast.css
extension/: background.js  manifest.json
extension/popup/: i18n.js  popup.css  popup.html  popup.js
js/: app.js  app.ts  dash.ts  embeds.ts  epg.ts  events.js  events.ts  fallback-image.ts  hls.ts  i18n.ts  keyboard.ts  loader.ts  parser.ts  player-core.js  player-core.ts  player-shared.ts  player-ui-helpers.ts  player.js  settings.ts  state.ts  sync.ts  types.ts  ui.ts  youtube.ts
public/: 404.html
src-tauri/: Cargo.toml
tests/: parser.test.ts  pin-lockout.test.ts  state.test.ts
